; ModuleID = '/home/carl/AnghaBench/qmk_firmware/drivers/qwiic/extr_micro_oled.c_set_column_address.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/drivers/qwiic/extr_micro_oled.c_set_column_address.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LCDWIDTH = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @set_column_address(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = ashr i32 %3, 4
  %5 = or i32 16, %4
  %6 = load i32, i32* @LCDWIDTH, align 4
  %7 = sub nsw i32 128, %6
  %8 = ashr i32 %7, 8
  %9 = add nsw i32 %5, %8
  %10 = call i32 @send_command(i32 %9)
  %11 = load i32, i32* %2, align 4
  %12 = and i32 15, %11
  %13 = call i32 @send_command(i32 %12)
  ret void
}

declare dso_local i32 @send_command(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
